--- a/_posts/2017-07-14-links.md
+++ b/_posts/2017-07-14-links.md
@@ -1,13 +1,10 @@
 ---
 title: "Roleplaying game links"
 categories: rpg resources
-layout: category
+layout: links
 redirect_from:
   - /rpg/resources/index.html
-subcategories:
-  -
-    slug: resources
-    title: "Resources"
+includecat: resources
 ---
 
 ## Tools
