--- a/_posts/2017-07-14-links.md
+++ b/_posts/2017-07-14-links.md
@@ -9,11 +9,11 @@ includecat: resources
 
 ## Tools
 
-- [Donjon RPG Tools](https://donjon.bin.sh/) --- Utterly huge list of useful
-  generators for all kinds of things, including entire dungeons, fantasy names,
-  world maps and random encounters.
-- [Fantasy Name Generator](https://www.fantasynamegen.com/) --- Generator for
-  fantasy character names, place names, and various others.
+- [Donjon RPG Tools](https://donjon.bin.sh/) --- Utterly huge selection of
+  useful generators for all kinds of things, including entire dungeons, fantasy
+  names,  world maps and random encounters.
+- [Fantasy Name Generator](https://www.fantasynamegen.com/) --- Name generator
+  for fantasy characters, places, and various others.
 - [Medieval Fantasy City Generator](https://watabou.itch.io/medieval-fantasy-city-generator) --- Map generator for walled towns and cities.
 
 ## Blogs and websites
@@ -25,8 +25,8 @@ includecat: resources
 
 - [D20 SRD](https://www.d20srd.org/) --- Free rules for D&D third edition.
 - [Pathfinder PRD](https://paizo.com/pathfinderRPG/prd/) --- Free rules for the
-- [Risus: The Anything RPG](https://web.archive.org/web/20130122101530/http://www222.pair.com/sjohn/risus15.htm)
   D20-based _Pathfinder RPG_.
+- [Risus: The Anything RPG](https://web.archive.org/web/20130122101530/http://www222.pair.com/sjohn/risus15.htm)
 
 ## Maps
 
