--- a/_posts/2017-07-14-links.md
+++ b/_posts/2017-07-14-links.md
@@ -5,6 +5,7 @@ layout: links
 redirect_from:
   - /rpg/resources/index.html
 includecat: resources
+updated: 2017-08-02
 ---
 
 ## Tools
@@ -15,6 +16,8 @@ includecat: resources
 - [Fantasy Name Generator](https://www.fantasynamegen.com/) --- Name generator
   for fantasy characters, places, and various others.
 - [Medieval Fantasy City Generator](https://watabou.itch.io/medieval-fantasy-city-generator) --- Map generator for walled towns and cities.
+- [Random word generator](https://www.randomlists.com/random-words), for
+  generating ideas for plots, characters, and so on.
 
 ## Blogs and websites
 
@@ -23,21 +26,14 @@ includecat: resources
 
 ## Games and rules
 
+- [Player's Basic Rules](https://dnd.wizards.com/products/tabletop/players-basic-rules) --- Free
+rules for D&D 5th edition players.
+- [Dungeon Master's Basic Rules](https://dnd.wizards.com/products/tabletop/dm-basic-rules) --- Free
+rules for D&D 5th edition DMs.
 - [D20 SRD](https://www.d20srd.org/) --- Free rules for D&D third edition.
 - [Pathfinder PRD](https://paizo.com/pathfinderRPG/prd/) --- Free rules for the
   D20-based _Pathfinder RPG_.
 - [Risus: The Anything RPG](https://web.archive.org/web/20130122101530/http://www222.pair.com/sjohn/risus15.htm)
-
-## Maps
-
-### Greyhawk
-
-- [Ivid the Undying composite map](https://www.acaeum.com/library/ivid_composite_map.gif) --- A map of Greyhawk's United Kingdom of Ahlissa, and North Kingdom.
-- [Map of Greyhawk Flanaess](http://www.highprogrammer.com/alan/gaming/dnd/greyhawk/map/supermapnew.html), by Domingo Quintero and Scott W.
-- [Oerth](https://1.bp.blogspot.com/-0eT-GrAllAY/T5kE6VuikeI/AAAAAAAAAgs/QUBiFaRh8TU/s1600/Rick+Millers+Oerth+v2.jpg),
-  by Rick Miller. A rare map of the entire world of Greyhawk.
-- [Paizo Greyhawk Flanaess map](https://paizo.com/download/dungeon/desktops/Greyhawk_1600x1024.jpg) --- A map of Greyhawk originally published as a series of
-  free posters with Dungeon magazine #118 to #121.
 
 ## Articles
 
@@ -46,5 +42,46 @@ Especially useful and interesting articles and pages.
 - [Medieval Demographics Made Easy](https://web.archive.org/web/20170518094604/http://www222.pair.com/sjohn/blueroom/demog.htm), by S. John Ross.
 - [The Big List of RPG Plots](https://web.archive.org/web/20170204020059/http://www222.pair.com/sjohn/blueroom/plots.htm), by S.John Ross.
 
-## At this site
+## World of Greyhawk
 
+### Reference
+
+- [Great Library of Greyhawk](https://wiki.greyparticle.com/), the premier
+  Greyhawk campaign setting wiki.
+- [List of Living Greyhawk articles](/rpg/resources/wizards-3e-archive.html#living-greyhawk)
+  at the old Wizards of the Coast D&D 3e website. Of particular interest is the
+  [Mysterious Places](/rpg/resources/wizards-3e-archive.html#mysterious-places)
+  series.
+- [Kingdom of Sunndi](https://web.archive.org/web/20070220152432/http://www.sunndi.org:80/sunndi/index.html),
+  an archived copy of the Living Greyhawk references pages for Sunndi.
+- [Innspa and Adri Marchland](http://www.adri.hoellengeier.de/engmain.html), the
+  website for the Living Greyhawk region for Germany and Austria.
+
+### Maps
+
+- [Ivid the Undying composite map](https://www.acaeum.com/library/ivid_composite_map.gif) --- A map of Greyhawk's United Kingdom of Ahlissa, and North Kingdom.
+- [Map of Greyhawk Flanaess](http://www.highprogrammer.com/alan/gaming/dnd/greyhawk/map/supermapnew.html), by Domingo Quintero and Scott W.
+- [Oerth](https://1.bp.blogspot.com/-0eT-GrAllAY/T5kE6VuikeI/AAAAAAAAAgs/QUBiFaRh8TU/s1600/Rick+Millers+Oerth+v2.jpg),
+  by Rick Miller. A rare map of the entire world of Greyhawk.
+- [Paizo Greyhawk Flanaess map](https://paizo.com/download/dungeon/desktops/Greyhawk_1600x1024.jpg) --- A map of Greyhawk originally published as a series of
+  free posters with Dungeon magazine #118 to #121.
+- [Anna Meyer](http://ghmaps.net/)'s maps site, featuring the most elaborate and
+  detailed Greyhawk maps available, of which you want the following:
+  - [Flanaess map download page](http://ghmaps.net/greyhawk-maps/flaness-map-download/),
+  absurdly high resolution (150MB+), optionally divided into twelve parts.
+  - [Realm maps](http://ghmaps.net/greyhawk-maps/realm-maps/), separate maps of
+  each kingdom.
+  - [Spread maps](http://ghmaps.net/greyhawk-maps/spread-maps/), blank maps of
+  the Flanaess to draw your own towns and borders on. The
+  [5000px](http://ghmaps.net/wordpress/wp-content/uploads/2015/07/Spread-5000px-light-grey.jpg)
+  map should be sufficient. Good for printing, tracking overland movement in
+  Roll20, tracking changing borders, etc.
+- [Sunndi map](https://web.archive.org/web/20070224103726if_/http://www.sunndi.org:80/images/maps/sunndi_political.png),
+  created by the Living Greyhawk team for that region. The most detailed map of
+  Sunndi, its political divisions and environs.
+- [Adri Forest map](http://www.adri.hoellengeier.de/slmapenglish.html),
+  (German), created by the Living Greyhawk team. A translation with the English
+  names is in the [glossary](http://www.adri.hoellengeier.de/glossary.html).
+
+## More resources at this site
+<!-- template inserts links here-->
