Add descriptions to posts for future theme use

--- a/_posts/2017-06-30-tiefling.md
+++ b/_posts/2017-06-30-tiefling.md
@@ -1,6 +1,7 @@
 ---
 title: "Tiefling"
 categories: rpg races
+description: "History of the tieflings as they changed throughout D&D's publication."
 ---
 
 Fourth edition was weird for tieflings.
