--- a/_posts/2017-07-14-links.md
+++ b/_posts/2017-07-14-links.md
@@ -6,6 +6,7 @@ redirect_from:
   - /rpg/resources/index.html
 includecat: resources
 updated: 2017-08-02
+description: "A links page for websites with useful tabletop RPG resources."
 ---
 
 ## Tools
