New dark theme, single-category URL structure

--- a/_posts/2017-06-30-tiefling.md
+++ b/_posts/2017-06-30-tiefling.md
@@ -1,6 +1,9 @@
 ---
 title: "Tiefling"
-categories: rpg races
+category: rpg
+tags: races
+redirect_from:
+- /rpg/races/tiefling.html
 description: "History of the tieflings as they changed throughout D&D's publication."
 ---
 
