--- a/_posts/2017-07-14-links.md
+++ b/_posts/2017-07-14-links.md
@@ -1,10 +1,10 @@
 ---
 title: "Roleplaying game links"
-categories: rpg resources
-layout: links
+category: rpg
+tags: resources
 redirect_from:
-  - /rpg/resources/index.html
-includecat: resources
+- /rpg/resources/links.html
+- /rpg/resources/index.html
 updated: 2017-08-02
 description: "A links page for websites with useful tabletop RPG resources."
 ---
@@ -85,4 +85,5 @@ Especially useful and interesting articles and pages.
   names is in the [glossary](http://www.adri.hoellengeier.de/glossary.html).
 
 ## More resources at this site
-<!-- template inserts links here-->
+
+- [RPG articles](https://orbitalflower.github.io/rpg/)
