--- a/_posts/2017-07-14-links.md
+++ b/_posts/2017-07-14-links.md
@@ -1,11 +1,11 @@
 ---
 title: "Roleplaying game links"
-category: rpg
+category: rpg links
 tags: resources
 redirect_from:
 - /rpg/resources/links.html
 - /rpg/resources/index.html
-updated: 2017-08-02
+updated: 2025-08-01
 description: "A links page for websites with useful tabletop RPG resources."
 ---
 
@@ -22,18 +22,19 @@ description: "A links page for websites with useful tabletop RPG resources."
 
 ## Blogs and websites
 
-- [DMDavid](http://dmdavid.com) --- A good D&D blog.
-- [IMarvinTPA's Dungeons & Dragons Database](http://www.imarvintpa.com/DnDLive/Index.php)
+- [DMDavid](https://dmdavid.com) --- A good D&D blog.
+- [IMarvinTPA's Dungeons & Dragons Database](https://www.imarvintpa.com/DnDLive/Index.php)
 
 ## Games and rules
 
 - [Player's Basic Rules](https://dnd.wizards.com/products/tabletop/players-basic-rules) --- Free
-rules for D&D 5th edition players.
+rules for D&D 5th edition players (2014).
 - [Dungeon Master's Basic Rules](https://dnd.wizards.com/products/tabletop/dm-basic-rules) --- Free
-rules for D&D 5th edition DMs.
-- [D20 SRD](https://www.d20srd.org/) --- Free rules for D&D third edition.
+rules for D&D 5th edition DMs (now links to the same as the above).
+- [D20 SRD](https://www.d20srd.org/) --- Free rules for D&D third edition. Now
+  also includes the D&D 5e and Pathfinder 1e SRDs.
 - [Pathfinder PRD](https://paizo.com/pathfinderRPG/prd/) --- Free rules for the
-  D20-based _Pathfinder RPG_.
+  D20-based _Pathfinder RPG_ (1st edition).
 - [Risus: The Anything RPG](https://web.archive.org/web/20130122101530/http://www222.pair.com/sjohn/risus15.htm)
 
 ## Articles
@@ -66,15 +67,15 @@ Especially useful and interesting articles and pages.
   by Rick Miller. A rare map of the entire world of Greyhawk.
 - [Paizo Greyhawk Flanaess map](https://paizo.com/download/dungeon/desktops/Greyhawk_1600x1024.jpg) --- A map of Greyhawk originally published as a series of
   free posters with Dungeon magazine #118 to #121.
-- [Anna Meyer](http://ghmaps.net/)'s maps site, featuring the most elaborate and
+- [Anna Meyer](https://ghmaps.net/)'s maps site, featuring the most elaborate and
   detailed Greyhawk maps available, of which you want the following:
-  - [Flanaess map download page](http://ghmaps.net/greyhawk-maps/flaness-map-download/),
+  - [Flanaess map download page](https://ghmaps.net/greyhawk-maps/flaness-map-download/),
   absurdly high resolution (150MB+), optionally divided into twelve parts.
-  - [Realm maps](http://ghmaps.net/greyhawk-maps/realm-maps/), separate maps of
+  - [Realm maps](https://ghmaps.net/greyhawk-maps/realm-maps/), separate maps of
   each kingdom.
-  - [Spread maps](http://ghmaps.net/greyhawk-maps/spread-maps/), blank maps of
+  - [Spread maps](https://ghmaps.net/greyhawk-maps/spread-maps/), blank maps of
   the Flanaess to draw your own towns and borders on. The
-  [5000px](http://ghmaps.net/wordpress/wp-content/uploads/2015/07/Spread-5000px-light-grey.jpg)
+  [5000px](https://ghmaps.net/wordpress/wp-content/uploads/2015/07/Spread-5000px-light-grey.jpg)
   map should be sufficient. Good for printing, tracking overland movement in
   Roll20, tracking changing borders, etc.
 - [Sunndi map](https://web.archive.org/web/20070224103726if_/http://www.sunndi.org:80/images/maps/sunndi_political.png),
