--- a/_posts/2017-07-14-links.md
+++ b/_posts/2017-07-14-links.md
@@ -24,6 +24,7 @@ description: "A links page for websites with useful tabletop RPG resources."
 
 - [DMDavid](https://dmdavid.com) --- A good D&D blog.
 - [IMarvinTPA's Dungeons & Dragons Database](https://www.imarvintpa.com/DnDLive/Index.php)
+- [Grognardia](https://grognardia.blogspot.com/) - Oldschool D&D blog
 
 ## Games and rules
 
@@ -36,6 +37,7 @@ rules for D&D 5th edition DMs (now links to the same as the above).
 - [Pathfinder PRD](https://paizo.com/pathfinderRPG/prd/) --- Free rules for the
   D20-based _Pathfinder RPG_ (1st edition).
 - [Risus: The Anything RPG](https://web.archive.org/web/20130122101530/http://www222.pair.com/sjohn/risus15.htm)
+- [Old-School Essentials SRD](https://oldschoolessentials.necroticgnome.com/srd/index.php/Main_Page), a set of RPG rules based on old D&D B/X
 
 ## Articles
 
@@ -43,6 +45,10 @@ Especially useful and interesting articles and pages.
 
 - [Medieval Demographics Made Easy](https://web.archive.org/web/20170518094604/http://www222.pair.com/sjohn/blueroom/demog.htm), by S. John Ross.
 - [The Big List of RPG Plots](https://web.archive.org/web/20170204020059/http://www222.pair.com/sjohn/blueroom/plots.htm), by S.John Ross.
+- [Principia Apocrypha](https://lithyscaphe.blogspot.com/p/principia-apocrypha.html), a statement on oldschool RPG playstyle principles
+- [Roll for Shoes](https://rollforshoes.com/), an interesting minimalist RPG
+- [Pretty Maps in Python](https://tech.marksblogg.com/pretty-maps-in-python.html), a tool for creating RPG maps from real-world OpenStreetWorld maps
+- [Best D&D map makers](https://www.dicebreaker.com/games/dungeons-and-dragons-5e/best-games/best-dnd-map-makers), a list of tools for making D&D maps
 
 ## World of Greyhawk
 
