--- a/_posts/2023-10-16-monopoly.md
+++ b/_posts/2023-10-16-monopoly.md
@@ -1,7 +1,7 @@
 ---
 title: "You're playing Monopoly wrong"
 category: games
-tags: monopoly
+tags: monopoly hot
 description: "Why players ignore a little-known official Monopoly rule, and the drawbacks of doing so."
 license: CC BY
 published: true
