--- a/_posts/2017-07-14-links.md
+++ b/_posts/2017-07-14-links.md
@@ -1,7 +1,7 @@
 ---
 title: "Roleplaying game links"
-category: rpg links
-tags: resources
+category: rpg
+tags: resources links
 redirect_from:
 - /rpg/resources/links.html
 - /rpg/resources/index.html
