--- a/_posts/2017-07-14-links.md
+++ b/_posts/2017-07-14-links.md
@@ -5,9 +5,12 @@ tags: resources links
 redirect_from:
 - /rpg/resources/links.html
 - /rpg/resources/index.html
-updated: 2025-08-01
+updated: 2026-02-28
 description: "A links page for websites with useful tabletop RPG resources."
+published: false
 ---
+
+**Updated** (2026-02-28): Superceded by main [links page](/links.html).
 
 ## Tools
 
